--- a/static/controller.css
+++ b/static/controller.css
@@ -16,14 +16,59 @@
   display: flex;
 }
 
+.Controller-row.Controller-mainRow {
+  flex: 2;
+}
+
 .Controller-button {
+  position: relative;
+
   flex: 1;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 
-  border: 1px solid black;
-
   color: white;
   text-transform: uppercase;
+}
+
+.Controller-imageLeft,
+.Controller-imageRight {
+  width: 100%;
+  max-width: 65px;
+  height: auto;
+}
+
+.Controller-imageRotate {
+  width: 100%;
+  max-width: 80px;
+  height: auto;
+}
+
+.Controller--rowWithGutters .Controller-button:not(:last-child) {
+  margin-right: 10px;
+}
+
+.Background--green {
+  background-image: linear-gradient(to bottom, #47ecc2, #1a6f4a);
+}
+
+.Background--red {
+  background-image: linear-gradient(to bottom, #fb7e7e, #873636);
+}
+
+.Background--yellow {
+  background-image: linear-gradient(to bottom, #ffcd48, #9f6f0c);
+}
+
+.Background--blue {
+  background-image: linear-gradient(to bottom, #53b3d8, #07486f);
+}
+
+.PlayerName {
+  position: absolute;
+  top: 50px;
+  width: 100%;
+  text-align: center;
 }
