Manage player state

--- a/static/controller.css
+++ b/static/controller.css
@@ -14,6 +14,8 @@
 .Controller-row {
   flex: 1;
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .Controller-row.Controller-mainRow {
